--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a href="./test.html">simple test</a></li>
             </ul>
         </div>
     </nav>
