--- a/index.html
+++ b/index.html
@@ -3,6 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+    ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        background-color: #f1f1f1;
+    }
+
+    li {
+        float: left;
+    }
+
+    li a {
+        display: block;
+        color: #333;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+    }
+
+    li a:hover {
+        background-color: #ddd;
+    }
+</style>
     <title>Varun Yadav - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
