added twitter post link

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a href="./twitter.html">See my latest twitter post</a></li>
                 <li><a href="./test.html">simple test</a></li>
             </ul>
         </div>
