--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
         margin: 0;
         padding: 0;
         overflow: hidden;
-        background-color: #f1f1f1;
     }
 
     li {
@@ -26,6 +25,7 @@
 
     li a:hover {
         background-color: #ddd;
+        color:"#212121";
     }
 </style>
     <title>Varun Yadav - Portfolio</title>
