--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="./photo.png" style="width:100%;border: 1%;" alt="Varun Yadav" >
+          <img src="./final.png" style="width:100%;border: 1%;" alt="Varun Yadav" >
           <div class="w3-display-bottomleft w3-container w3-text-white">
             <h2><b style="font-size: larger; font-family: Arial, Helvetica, sans-serif;">Varun Yadav</b></h2>
           </div>
