--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="w3-display-container">
           <img src="./final.png" style="width:100%;border: 1%;" alt="Varun Yadav" >
           <div class="w3-display-bottomleft w3-container w3-text-white">
-            <h2><b style="font-size: larger; font-family: Arial, Helvetica, sans-serif;color: #01453e;">Varun Yadav</b></h2>
+            <h2><b style="font-size: larger; font-family: Arial, Helvetica, sans-serif;color: #00e0c9;">Varun Yadav</b></h2>
           </div>
         </div>
         <div class="w3-container">
